feat: 添加获取第三方应用信息
