# docs/swagger.yaml
@@ -29,6 +29,33 @@ definitions:
     - name
     - project_user
     type: object
+  model.Auth2UserInfo:
+    properties:
+      github_avatar:
+        description: github 头像
+        type: string
+      github_username:
+        description: github 昵称
+        type: string
+      qq_avatar:
+        description: qq 头像
+        type: string
+      qq_username:
+        description: qq 昵称
+        type: string
+      wechat_avatar:
+        description: 微信头像
+        type: string
+      wechat_username:
+        description: 微信昵称
+        type: string
+      weibo_avatar:
+        description: 微博头像
+        type: string
+      weibo_username:
+        description: 微博昵称
+        type: string
+    type: object
   model.AuthError:
     properties:
       code:
@@ -561,6 +588,22 @@ paths:
       summary: 获取项目列表
       tags:
       - 项目
+  /user/auth2Info:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Auth2UserInfo'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/services.WebResponse'
+      summary: 获取用户第三方应用信息
+      tags:
+      - 用户管理
   /user/avatar/update:
     post:
       consumes:
